--- a/paraiso-dos-focinhos/src/estilo/HelpSstyle.css
+++ b/paraiso-dos-focinhos/src/estilo/HelpSstyle.css
@@ -25,7 +25,7 @@ section#help div.corpo h3{
 }
 
 section#help div.corpo p{
-    margin: auto auto auto 10px;
+    margin: auto auto auto 17px;
     font-size: 30px;
     text-align: left;
 }
@@ -36,13 +36,17 @@ section#help div.corpo h4{
     margin-left: 17px;
 }
 
-div.imgdog{
+section#help div.imgdog{
     display: block;
     margin: auto 10px auto auto;
 }
 
-div.imgpaw{
+section#help div.imgpaw{
     display: block;
     align-content: center;
 }
 
+section#help div.corpo a{
+    margin-left: 17px;
+    font-size: 35px;
+}
