--- a/paraiso-dos-focinhos/src/estilo/HelpSstyle.css
+++ b/paraiso-dos-focinhos/src/estilo/HelpSstyle.css
@@ -7,26 +7,31 @@ section#help {
     width: 100%;
     margin: 0;
     background: #414BB2 url("aaaa.png") no-repeat scroll center;
-    background-repeat: no-repeat;
+    background-size: 150px;
     font-size: 20px;
 }
 
 section#help div.corpo {
     display: flex;
-    flex-direction: column;
-    max-width: 800px;
+    width: 1500px;
+    height: 300px;
     margin: auto;
     color: white;
+}
+
+section#help div.corpo div.text{
+    float: left;
+    width: 700px;
 }
 
 section#help div.corpo h3{
     font-size: 45px;
     text-align: left;
-    margin-left: 1px;
+    margin-left: 20px;
 }
 
 section#help div.corpo p{
-    margin: auto auto auto 1px;
+    margin: auto auto auto 20px;
     font-size: 30px;
     text-align: left;
 }
@@ -34,12 +39,12 @@ section#help div.corpo p{
 section#help div.corpo h4{
     font-size: 20px;
     text-align: left;
-    margin-left: 1px;
+    margin-left: 20px;
 }
 
 section#help div.imgdog{
     display: block;
-    margin: auto 1px auto auto;
+    margin: 60px 150px 60px auto;
 }
 
 section#help div.corpo a{
