--- a/paraiso-dos-focinhos/src/estilo/HelpSstyle.css
+++ b/paraiso-dos-focinhos/src/estilo/HelpSstyle.css
@@ -7,14 +7,13 @@ section#help {
     width: 100%;
     margin: 0;
     background: #414BB2 url("aaaa.png") no-repeat scroll center;
-    background-size: 150px;
+    background-size: 400px;
     font-size: 20px;
 }
 
 section#help div.corpo {
     display: flex;
     width: 1500px;
-    height: 300px;
     margin: auto;
     color: white;
 }
@@ -24,10 +23,18 @@ section#help div.corpo div.text{
     width: 700px;
 }
 
+#title-underline{
+    background-color: white;
+    height: 10px;
+    width: 490px;
+    margin: 0px auto 30px 20px;
+}
+
 section#help div.corpo h3{
     font-size: 45px;
     text-align: left;
     margin-left: 20px;
+    margin-bottom: 0px;
 }
 
 section#help div.corpo p{
@@ -44,10 +51,33 @@ section#help div.corpo h4{
 
 section#help div.imgdog{
     display: block;
-    margin: 60px 150px 60px auto;
+    margin: 60px 270px 60px auto;
 }
 
-section#help div.corpo a{
-    margin-left: 17px;
-    font-size: 35px;
+#caixadocs{
+    height: 35px;
+    width: 170px;
+    background-color: #FAC710;
+    margin-left: 60px;
+    margin-top: 20px;
+}
+
+#caixadocs a{
+    margin-left: 20px;
+    font-size: 25px;
+    margin-top: 120px;
+    text-align: center;
+}
+
+#caixahelp{
+    height: 27px;
+    width: 140px;
+    background-color: #FAC710;
+    margin-left: 70px;
+    margin-top: 30px;
+}
+
+#caixahelp a{
+    margin-left: 25px;
+    font-size: 17px;
 }
